--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
         "psr-4" : {
             "" : "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.2@dev"
     }
 }
