--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {},
     "autoload" : {
         "psr-4" : {
-            "" : "src/"
+            "" : "src/",
+            "Tests\\" : "tests/"
         }
     },
     "require-dev": {
